--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -32,11 +32,10 @@
 }
 .watermark, .watermark-nowrapper {
   position: absolute;
-  top: 10%;
+  top: 8em;
   right: 0;
   z-index: 1000;
   font-weight: normal;
-  font-size: 0.85em;
   text-align: center;
   width: 100%;
   max-width: 100%;
@@ -409,7 +408,7 @@ padding: 0 6px;
 @media (min-width: 641px) {
   .tnth-navbarXs-img-container img {
     width: 65%;
-  } 
+  }
 }
 .profile-img {
   display: none;
